--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-body{
+body {
   background-color: #232937;
   overflow: hidden;
 }
@@ -39,7 +40,6 @@ body{
   display: none;
 }
 
-
 .centerOfMass {
   position: absolute;
   width: 11px;
@@ -69,14 +69,7 @@ body{
 
 .spin {
   -webkit-animation: spin .5s linear infinite;
-  -moz-animation: spin .5s linear infinite;
   animation: spin .5s linear infinite;
-}
-
-@-moz-keyframes spin {
-  100% {
-    -moz-transform: rotate(-360deg);
-  }
 }
 
 @-webkit-keyframes spin {
@@ -103,7 +96,7 @@ body{
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none; */
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .hudContainer {
@@ -169,7 +162,6 @@ body{
   border: 0;
 }
 
-
 .slider {
   margin: 0 auto;
 }
@@ -186,13 +178,11 @@ body{
   background-color: #4b4b4b;
 }
 
-
-
 .button {
   margin: 5px;
   padding: 5px 10px 3px 10px;
   display: inline-block;
-  color: rgb(34, 34, 34);
+  color: #222222;
   text-decoration: none;
   border: none;
   cursor: pointer;
@@ -205,7 +195,6 @@ body{
 .button--isSelected {
   background-color: #df4576;
 }
-
 
 .SickSlider {
   position: relative;
@@ -231,3 +220,4 @@ body{
   background-color: #999999;
   border: 1px solid #FFFFFF;
 }
+/*# sourceMappingURL=style.css.map */
