--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 * {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-body {
+body{
   background-color: #232937;
   overflow: hidden;
 }
@@ -40,6 +39,7 @@ body {
   display: none;
 }
 
+
 .centerOfMass {
   position: absolute;
   width: 11px;
@@ -69,7 +69,14 @@ body {
 
 .spin {
   -webkit-animation: spin .5s linear infinite;
+  -moz-animation: spin .5s linear infinite;
   animation: spin .5s linear infinite;
+}
+
+@-moz-keyframes spin {
+  100% {
+    -moz-transform: rotate(-360deg);
+  }
 }
 
 @-webkit-keyframes spin {
@@ -96,7 +103,7 @@ body {
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none; */
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
 }
 
 .hudContainer {
@@ -162,6 +169,7 @@ body {
   border: 0;
 }
 
+
 .slider {
   margin: 0 auto;
 }
@@ -178,11 +186,13 @@ body {
   background-color: #4b4b4b;
 }
 
+
+
 .button {
   margin: 5px;
   padding: 5px 10px 3px 10px;
   display: inline-block;
-  color: #222222;
+  color: rgb(34, 34, 34);
   text-decoration: none;
   border: none;
   cursor: pointer;
@@ -195,6 +205,7 @@ body {
 .button--isSelected {
   background-color: #df4576;
 }
+
 
 .SickSlider {
   position: relative;
@@ -220,4 +231,3 @@ body {
   background-color: #999999;
   border: 1px solid #FFFFFF;
 }
-/*# sourceMappingURL=style.css.map */
